k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devportfolio-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - tsiporfolio.com
      secretName: devprofolioo-tls
  rules:
    - host: tsiporfolio.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devportfolio-service
                port:
                  number: 80
